Fix profile header-pic and background

--- a/profile.html
+++ b/profile.html
@@ -15,11 +15,22 @@
   <body>
     <header class="header-pic">
       <div class="header-pic__circle">
-        <img src="" alt="profilepicture" class="header-pic__profile" />
+        <img
+          src="./Components/images/img/vasi-dHufW_8oJxs-unsplash_klein.png"
+          alt="profilepicture"
+          class="images__profile"
+        />
       </div>
 
-      <a href=""><img src="" alt="" class="icon" /></a>
-      <a href=""><img src="" alt="" class="icon" /></a>
+      <a href="" class="icon__circle"
+        ><img
+          src="./Components/images/Icon/Message.svg"
+          alt="message link"
+          class="icon"
+      /></a>
+      <a href="" class="icon__circle"
+        ><img src="./Components/images/Icon/Bookmark.svg" alt="" class="icon"
+      /></a>
 
       <!--<img src="*>"-->
     </header>
