Add icons to profile-site

--- a/profile.html
+++ b/profile.html
@@ -21,18 +21,22 @@
           class="images__profile"
         />
       </div>
+      <div class="header__icon-box">
+        <div class="icon__elipse--marked"></div>
 
-      <a href="" class="icon__circle"
-        ><img
-          src="./Components/images/Icon/Message.svg"
-          alt="message link"
-          class="icon"
-      /></a>
-      <a href="" class="icon__circle"
-        ><img src="./Components/images/Icon/Bookmark.svg" alt="" class="icon"
-      /></a>
-
-      <!--<img src="*>"-->
+        <a href="" class="icon__circle"
+          ><img
+            src="./Components/images/Icon/Message.svg"
+            alt="message link"
+            class="icon"
+        /></a>
+        <a href="" class="icon__circle"
+          ><img
+            src="./Components/images/Icon/Bookmark.svg"
+            alt="bookmark link"
+            class="icon icon--high"
+        /></a>
+      </div>
     </header>
 
     <main>
