Add first summary

--- a/alert.html
+++ b/alert.html
@@ -16,17 +16,17 @@
     <header class="header-bar">
       <h1 class="text__headline1">Alerts</h1>
       <p class="text__marked"></p>
-
-      <!--<img src="*>"-->
     </header>
 
     <main>
       <section class="summary">
         <h2 class="text__headline2">Today</h2>
         <div class="summary__box">
-          <img src="" alt="" class="icon" />
-          <p class="text text--bold"></p>
-          <p class="text text--timestamp"></p>
+          <img src="./Components/images/Icon/Like.svg" alt="" class="icon" />
+          <p class="text text--bold">
+            <strong>Sofia, John and +19 others</strong> liked your post.
+          </p>
+          <p class="text text--timestamp">10m ago</p>
         </div>
 
         <div class="summary__box">
