--- a/alert.html
+++ b/alert.html
@@ -22,19 +22,47 @@
       <section class="summary">
         <h2 class="text__headline2">Today</h2>
         <div class="summary__box">
-          <img src="./Components/images/Icon/Like.svg" alt="" class="icon" />
-          <p class="text text--bold">
-            <strong>Sofia, John and +19 others</strong> liked your post.
-          </p>
-          <p class="text text--timestamp">10m ago</p>
+          <div class="icon__circle icon__circle--blank">
+            <svg
+              style="width: 24px; height: 24px"
+              viewBox="0 0 24 24"
+              class="icon icon__like icon__like--blue"
+            >
+              <path
+                fill="currentColor"
+                d="M5,9V21H1V9H5M9,21A2,2 0 0,1 7,19V9C7,8.45 7.22,7.95 7.59,7.59L14.17,1L15.23,2.06C15.5,2.33 15.67,2.7 15.67,3.11L15.64,3.43L14.69,8H21C22.11,8 23,8.9 23,10V12C23,12.26 22.95,12.5 22.86,12.73L19.84,19.78C19.54,20.5 18.83,21 18,21H9M9,19H18.03L21,12V10H12.21L13.34,4.68L9,9.03V19Z"
+              />
+            </svg>
+          </div>
+          <div class="text__summary-container">
+            <p class="text text--bold">
+              <strong>Sofia, John and +19 others</strong> liked your post.
+            </p>
+            <p class="text text--timestamp">10m ago</p>
+          </div>
         </div>
 
         <div class="summary__box">
-          <img src="" alt="" class="icon" />
-          <p class="text text--bold"></p>
-          <p class="text text--timestamp"></p>
+          <div class="icon__circle icon__circle--blank">
+            <svg
+              style="width: 24px; height: 24px"
+              viewBox="0 0 24 24"
+              class="icon icon__like icon__like--blue"
+            >
+              <path
+                fill="currentColor"
+                d="M5,9V21H1V9H5M9,21A2,2 0 0,1 7,19V9C7,8.45 7.22,7.95 7.59,7.59L14.17,1L15.23,2.06C15.5,2.33 15.67,2.7 15.67,3.11L15.64,3.43L14.69,8H21C22.11,8 23,8.9 23,10V12C23,12.26 22.95,12.5 22.86,12.73L19.84,19.78C19.54,20.5 18.83,21 18,21H9M9,19H18.03L21,12V10H12.21L13.34,4.68L9,9.03V19Z"
+              />
+            </svg>
+          </div>
+          <div class="text__summary-container">
+            <p class="text text--bold">
+              <strong>Sofia, John and +19 others</strong> liked your post.
+            </p>
+            <p class="text text--timestamp">10m ago</p>
+          </div>
         </div>
-      </section>
+       
 
       <section class="summary">
         <h2 class="text__headline2">Yesterday</h2>
