Add content to summary

--- a/alert.html
+++ b/alert.html
@@ -26,7 +26,7 @@
             <svg
               style="width: 24px; height: 24px"
               viewBox="0 0 24 24"
-              class="icon icon__like icon__like--blue"
+              class="icon icon--blue"
             >
               <path
                 fill="currentColor"
@@ -47,7 +47,7 @@
             <svg
               style="width: 24px; height: 24px"
               viewBox="0 0 24 24"
-              class="icon icon__like icon__like--blue"
+              class="icon icon--blue"
             >
               <path
                 fill="currentColor"
@@ -57,31 +57,90 @@
           </div>
           <div class="text__summary-container">
             <p class="text text--bold">
-              <strong>Sofia, John and +19 others</strong> liked your post.
+              <strong>Rebecca, Daisy and +11 others</strong> liked your post.
             </p>
             <p class="text text--timestamp">10m ago</p>
           </div>
         </div>
-       
+      </section>
 
       <section class="summary">
         <h2 class="text__headline2">Yesterday</h2>
         <div class="summary__box">
-          <img src="" alt="" class="icon" />
-          <p class="text text--bold"></p>
-          <p class="text text--timestamp"></p>
+          <div class="icon__circle icon__circle--blank">
+            <svg
+              width="24"
+              height="24"
+              viewBox="0 0 24 24"
+              fill="none"
+              xmlns="http://www.w3.org/2000/svg"
+              class="icon icon--pink"
+            >
+              <path
+                d="M8 12H8.01M12 12H12.01M16 12H16.01M21 12C21 16.418 16.97 20 12 20C10.5286 20.005 9.07479 19.6808 7.745 19.051L3 20L4.395 16.28C3.512 15.042 3 13.574 3 12C3 7.582 7.03 4 12 4C16.97 4 21 7.582 21 12Z"
+                stroke="var(--color-gradient1)"
+                stroke-width="2"
+                stroke-linecap="round"
+                stroke-linejoin="round"
+              />
+            </svg>
+          </div>
+          <div class="text__summary-container">
+            <p class="text text--bold">
+              <strong>Katrina, Denver and 2+ others</strong> commented on your
+              post.
+            </p>
+            <p class="text text--timestamp">10m ago</p>
+          </div>
         </div>
 
         <div class="summary__box">
-          <img src="" alt="" class="icon" />
-          <p class="text text--bold"></p>
-          <p class="text text--timestamp"></p>
+          <div class="icon__circle icon__circle--blank">
+            <svg
+              width="8"
+              height="11"
+              viewBox="0 0 8 11"
+              fill="none"
+              xmlns="http://www.w3.org/2000/svg"
+              class="icon icon--blue"
+            >
+              <path
+                d="M4.00586 10.1094C5.85156 10.1094 7.3623 9.00879 7.3623 7.18359C7.3623 3.97754 2.68652 4.59277 2.68652 2.77441C2.68652 2.15918 3.21973 1.74219 3.90332 1.74219C4.55273 1.74219 5.12695 2.11816 5.46191 2.77441L6.9043 1.89258C6.24121 0.716797 5.1543 0.197266 3.96484 0.197266C2.33789 0.197266 0.950195 1.1543 0.950195 2.86328C0.950195 6.00781 5.62598 5.33789 5.62598 7.34082C5.62598 8.02441 5.06543 8.57129 4.0332 8.57129C3.00781 8.57129 2.15332 8.03809 2.03027 6.83496L0.307617 7.27246C0.615234 9.17285 2.29688 10.1094 4.00586 10.1094Z"
+                fill="#2E8AF7"
+              />
+            </svg>
+          </div>
+          <div class="text__summary-container">
+            <p class="text text--bold" text--content-after>
+              <strong>Savannah Wilson</strong> is celebrating birthday today.
+              Drop a wish!
+            </p>
+            <p class="text text--timestamp">1d ago</p>
+          </div>
         </div>
 
         <div class="summary__box">
-          <img src="" alt="" class="icon" />
-          <p class="text text--bold"></p>
-          <p class="text text--timestamp"></p>
+          <div class="icon__circle icon__circle--blank">
+            <svg
+              width="14"
+              height="13"
+              viewBox="0 0 14 13"
+              fill="none"
+              xmlns="http://www.w3.org/2000/svg"
+              class="icon"
+            >
+              <path
+                d="M6.8291 12.3789C7.62891 12.3789 8.29883 12.2559 8.96191 12.0166L8.49707 10.7725C7.97754 10.9365 7.47852 11.0391 6.84277 11.0391C4.21094 11.0391 1.98926 9.34375 1.98926 6.41797C1.98926 3.68359 3.93066 1.48926 6.95898 1.48926C10.0078 1.48926 11.8193 3.74512 11.8193 6.24707C11.8193 7.59375 11.2998 9.15918 9.89844 9.15918C9.39258 9.15918 9.25586 8.96094 9.25586 8.38672C9.25586 7.04688 9.99414 4.6543 10.2881 3.08203H8.94824L8.81836 3.66992C8.49707 3.13672 7.89551 2.74707 7.04102 2.74707C4.92871 2.74707 3.72559 5.12598 3.72559 6.96484C3.72559 8.40723 4.46387 9.70605 6.02246 9.70605C6.71973 9.70605 7.45117 9.43945 8.02539 8.90625C8.05273 9.15918 8.10742 9.37109 8.18945 9.56934C8.46973 10.1709 9.05762 10.5195 9.93945 10.5195C12.0928 10.5195 13.1182 8.38672 13.1182 6.27441C13.1182 3.05469 10.7666 0.210938 6.94531 0.210938C3.19238 0.210938 0.683594 2.97266 0.683594 6.44531C0.683594 10.0957 3.45898 12.3789 6.8291 12.3789ZM6.13184 8.37305C5.33203 8.37305 4.9834 7.87402 4.9834 7.01953C4.9834 5.72754 5.76953 4.08008 7.23926 4.08008C8.05273 4.08008 8.37402 4.5791 8.37402 5.40625C8.37402 6.71191 7.58789 8.37305 6.13184 8.37305Z"
+                fill="white"
+              />
+            </svg>
+          </div>
+          <div class="text__summary-container">
+            <p class="text text--bold">
+              <strong>Ralph Edwards</strong> mentioned you in a post.
+            </p>
+            <p class="text text--timestamp">1d ago</p>
+          </div>
         </div>
       </section>
     </main>
