Style summary section

--- a/alert.html
+++ b/alert.html
@@ -20,7 +20,7 @@
 
     <main>
       <section class="summary">
-        <h2 class="text__headline2">Today</h2>
+        <h2 class="text text__headline2">Today</h2>
         <div class="summary__box">
           <div class="icon__circle icon__circle--blank">
             <svg
@@ -65,7 +65,7 @@
       </section>
 
       <section class="summary">
-        <h2 class="text__headline2">Yesterday</h2>
+        <h2 class="text text__headline2">Yesterday</h2>
         <div class="summary__box">
           <div class="icon__circle icon__circle--blank">
             <svg
