--- a/alert.html
+++ b/alert.html
@@ -35,8 +35,9 @@
             </svg>
           </div>
           <div class="text__summary-container">
-            <p class="text text--bold">
-              <strong>Sofia, John and +19 others</strong> liked your post.
+            <p class="text">
+              <span class="text--bold">Sofia, John and +19 others</span>
+              liked your post.
             </p>
             <p class="text text--timestamp">10m ago</p>
           </div>
@@ -56,8 +57,9 @@
             </svg>
           </div>
           <div class="text__summary-container">
-            <p class="text text--bold">
-              <strong>Rebecca, Daisy and +11 others</strong> liked your post.
+            <p class="text">
+              <span class="text--bold">Rebecca, Daisy and +11 others</span>
+              liked your post.
             </p>
             <p class="text text--timestamp">10m ago</p>
           </div>
@@ -86,9 +88,9 @@
             </svg>
           </div>
           <div class="text__summary-container">
-            <p class="text text--bold">
-              <strong>Katrina, Denver and 2+ others</strong> commented on your
-              post.
+            <p class="text">
+              <span class="text--bold">Katrina, Denver and 2+ others</span>
+              commented on your post.
             </p>
             <p class="text text--timestamp">10m ago</p>
           </div>
@@ -111,9 +113,9 @@
             </svg>
           </div>
           <div class="text__summary-container">
-            <p class="text text--bold" text--content-after>
-              <strong>Savannah Wilson</strong> is celebrating birthday today.
-              Drop a wish!
+            <p class="text" text--content-after>
+              <span class="text--bold">Savannah Wilson</span> is celebrating
+              birthday today. Drop a wish!
             </p>
             <p class="text text--timestamp">1d ago</p>
           </div>
@@ -136,8 +138,9 @@
             </svg>
           </div>
           <div class="text__summary-container">
-            <p class="text text--bold">
-              <strong>Ralph Edwards</strong> mentioned you in a post.
+            <p class="text">
+              <span class="text--bold">Ralph Edwards</span> mentioned you in a
+              post.
             </p>
             <p class="text text--timestamp">1d ago</p>
           </div>
