Add greetings and tag nav

--- a/home.html
+++ b/home.html
@@ -14,9 +14,17 @@
   </head>
   <body>
     <header class="header-bar">
-      <h1 class="text__headline1">Good morning, Alex</h1>
+      <div class="header__bar_greet">
+        <h1 class="text__headline1">Good morning, Alex</h1>
+        <img src="./Components/images/Icon/Message.svg" alt="Message">
 
-      <!--<img src="*>"-->
+      <section class="header__stories">
+       <img src="./Components/images/pics_stories/Story 1.svg" alt="Storie1">
+       <img src="./Components/images/pics_stories/Story 2.svg" alt="">
+       <img src="./Components/images/pics_stories/Story 3.svg" alt="">
+
+        <!--WARNING! Codes from hell above. Do not open! Repeat: Do not open! XD -->
+      </section>
     </header>
 
     <main>
